syntax = "proto3";

option go_package = "pb/gen/events";

package ukama.events.v1;

import "validator.proto";
import "google/protobuf/any.proto";

service EventNotificationService {
    rpc EventNotification(Event) returns (EventResponse);
}

message Event {
    string routingKey = 1 [(validator.field) = {string_not_empty: true}];
    google.protobuf.Any msg = 2;
}

message EventResponse {

}

message SimUsage {
    string id = 1 [(validator.field) = {uuid_ver: 4, string_not_empty: true}, json_name = "id"];
    string simId = 2 [(validator.field) = {uuid_ver: 4, string_not_empty: true}, json_name = "sim_id"];
    string subscriberId = 3 [(validator.field) = {uuid_ver: 4, string_not_empty: true}, json_name = "subscriber_id"];
    string networkId = 4 [(validator.field) = {uuid_ver: 4, string_not_empty: true}, json_name = "network_id"];
    string orgId = 5 [(validator.field) = {uuid_ver: 4, string_not_empty: true}, json_name = "org_id"];
    string type = 6;
    uint64 bytesUsed = 7;
    string sessionId = 8;
    int64   startTime = 9;
    int64 endTime = 10;
}
